[pascales] adding base64decoder feature

--- a/app/views/base64decoders/_form.html.erb
+++ b/app/views/base64decoders/_form.html.erb
@@ -16,11 +16,7 @@
     <%= form.text_field :datainput %>
     <%= form.select :operation, ['decode', 'encode']%>
   </div>
-
-
-
-
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Convert' %>
   </div>
 <% end %>
