--- a/app/views/base64decoders/index.html.erb
+++ b/app/views/base64decoders/index.html.erb
@@ -5,7 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>data</th>
+      <th>Data</th>
+      <th>Operation</th>
+      <th>Result</th>
     </tr>
   </thead>
 
