[pascales] adding oauth2 with  google

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,7 @@
 <H> Hellowwwww </H>
-
-<%= link_to 'Posts', posts_path =%>
+<br>
+<%= link_to 'Posts', posts_path %>
+<br>
+<%= link_to 'Users', users_path %>
+<br>
+<%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %>
