add something aku lupa

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
 <H> Hellowwwww </H>
 <br>
+<%= link_to 'Base64 Decoder', base64decoders_path %>
+<br>
 <%= link_to 'Posts', posts_path %>
 <br>
 <%= link_to 'Users', users_path %>
