--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,10 @@
 <% if user_signed_in? %>
 	You are logged in as : <%= current_user.email %>
 	<br>
+	<%= current_user.name %>
+	<br>
+	<%= image_tag current_user.image %>
+	<br>
 	<%= link_to('Logout', destroy_user_session_path, method: :delete) %> 
 <% else %>
 	Please Log in
