adding some cosmetics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+
     <title>NotABlog</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +17,10 @@
   </head>
 
   <body>
+  <%= render 'layouts/navigation'%>
+
     <%= yield %>
+   <%= render 'layouts/footer'%>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </body>
 </html>
