--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,27 @@
-<H> Hellowwwww </H>
-<br>
-<%= link_to 'Base64 Decoder', base64decoders_path %>
-<br>
-<%= link_to 'Posts', posts_path %>
-<br>
-<%= link_to 'Users', users_path %>
-<br>
-<%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %>
+<!-- Header Section Start -->
+
+    <header id="video-area" data-stellar-background-ratio="0.5">    
+      <%= video_tag "video.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, class: "video" %>
+      <div class="fixed-top">
+          <div class="container">
+            <div class="logo-menu">
+              <a href="" class="logo"><strong>Not-a-blog</strong></a>
+              <button class="menu-button" id="open-button"><i class="fa fa-bars" aria-hidden="true"></i></button>    
+            </div>           
+          </div>
+      </div>
+          <div class="overlay-2"></div> 
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col-md-10">
+            <div class="contents text-center">
+              <h1 class="wow pos fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Hello there, I'm Pascales</h1>
+              <p class="lead pos  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">I am a Quality Assurance and a Backend Developer specialized in Backend API server and monolith rails server, currently I'm still learning Full stack Developer</p>
+              <a href="#portfolios" class="btn pos btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms"> About Me</a>
+            </div>
+              
+          </div>
+        </div> 
+      </div>      
+    </header>
+    <!-- Header Section End --> 
