--- a/app/views/base64decoders/index.html.erb
+++ b/app/views/base64decoders/index.html.erb
@@ -1,13 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Base64decoder</h1>
+  <div class="section-header">          
+    <h2 class="section-title" >Base64 Decoder</h2>
+    <hr class="lines wow zoomIn" data-wow-delay="0.3s">
+    <p class="section-subtitle wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">This is a Simple base64 converter</p>
+  </div>
 
-<table>
-  <thead>
+<div class="container" align="center">    
+<table class="table-hover">
+  <thead class="thead-dark">
     <tr>
-      <th>Data</th>
-      <th>Operation</th>
-      <th>Result</th>
+      <th scope="col">Data</th>
+      <th scope="col">Operation</th>
+      <th scope="col">Result</th>
     </tr>
   </thead>
 
@@ -22,7 +27,8 @@
     <% end %>
   </tbody>
 </table>
-
+<%= link_to 'New Decoder |', new_base64decoder_path %>
+<%= link_to 'Home', root_path %>
+</div>
 <br>
 
-<%= link_to 'New Decoder', new_base64decoder_path %>
