--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
         <div class="row justify-content-md-center">
           <div class="col-md-10">
             <div class="contents text-center">
-              <h1 class="wow pos fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Hello there, I'm Pascales</h1>
+              <h1 class="wow pos fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Hello there, I'm Pascales :)</h1>
               <p class="lead pos  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">I am a Quality Assurance and a Backend Developer specialized in Backend API server and monolith rails server, currently I'm still learning Full stack Developer</p>
               <a href="#portfolios" class="btn pos btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms"> About Me</a>
             </div>
