--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
             <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
               <div class="blog-item-img">
                 <a href="single-post.html">
-                <%= image_tag("blog/img1.jpg", alt: "")%>
+                <%= image_tag post.image_url%>
                  
                 </a>                
               </div>
