--- a/app/views/base64decoders/new.html.erb
+++ b/app/views/base64decoders/new.html.erb
@@ -1,5 +1,8 @@
+<%= render 'header' %>
+<div class="container">
 <h1>New Data</h1>
 
 <%= render 'form', base64decoder: @base64decoder %>
 
 <%= link_to 'Back', base64decoders_path %>
+</div>
