--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,9 @@
-<p id="notice"><%= notice %></p>
+<%= render 'header' %>
     <!-- Blog Section -->
     <section id="blog" class="section">
+      <p id="notice"><%= notice %></p>
       <!-- Container Starts -->
       <div class="container">
-        <div class="section-header">          
-          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Latest <span>Articles</span></h2>
-          <p class="section-subtitle wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">These are my articles, mostly published in medium ( medium.com/@pascales ) </p>
-        </div>
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
 
@@ -14,7 +11,7 @@
             <% @posts.each do |post| %>
             <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
               <div class="blog-item-img">
-                <a href="single-post.html">
+                <a>
                 <%= image_tag post.image_url%>
                  
                 </a>                
