--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,6 +17,7 @@
 	<br>
 	<%= link_to 'Register', new_user_registration_path %>
 	<%= link_to 'Login', user_session_path %>
+	 <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, class: "nav-link" %>
 <% end %>
 
 <br>
