--- a/app/views/base64decoders/show.html.erb
+++ b/app/views/base64decoders/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'header' %>
+<div class="container"> 
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -17,3 +19,4 @@
 </p>
 
 <%= link_to 'Back', base64decoders_path %>
+</div>
