--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,19 +3,22 @@
           <div class="icon-list navbar-collapse">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#video-area">Home</a>
+                <%= link_to 'Home', root_path, class: "nav-link" %>
               </li>
               <li class="nav-item">
                 <%= link_to 'Blog', posts_path, class: "nav-link" %>
               </li>  
               <li class="nav-item">
                 <%= link_to 'Base64 Decoder', base64decoders_path, class: "nav-link" %>
-              </li>                            
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Weather Forecast (BMKG)', weathers_path, class: "nav-link" %>
+              </li>                             
               <li class="nav-item">
                 <%= link_to 'Users', users_path, class: "nav-link" %>
               </li>            
               <li class="nav-item">
-                <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, class: "nav-link" %>
+               
               </li>     
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
