--- a/app/views/posts/_header.html.erb
+++ b/app/views/posts/_header.html.erb
@@ -1,7 +1,5 @@
 <!-- Header Section Start -->
-
     <header id="video-area" data-stellar-background-ratio="0.5">    
-      <%= video_tag "video.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, class: "video" %>
       <div class="fixed-top">
           <div class="container">
             <div class="logo-menu">
@@ -15,9 +13,9 @@
         <div class="row justify-content-md-center">
           <div class="col-md-10">
             <div class="contents text-center">
-              <h1 class="wow pos fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Hello there, I'm Pascales :)</h1>
-              <p class="lead pos  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">I am a Quality Assurance and a Backend Developer specialized in Backend API server and monolith rails server, currently I'm still learning Full stack Developer</p>
-              <a href="#portfolios" class="btn pos btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms"> About Me</a>
+              <h1 class="wow pos fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Latest Article</h1>
+              <p class="lead pos  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">These are my articles, mostly published in medium ( medium.com/@pascales ) </p>
+              </p>
             </div>
               
           </div>
