--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -8,8 +8,8 @@
 :: Created: 01/25/2018
 -------------------------- */
 
-@import url('https://fonts.googleapis.com/css?family=Lato:300');
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,600');
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
+@import url('https://fonts.googleapis.com/css?family=Sawarabi+Mincho');
 
 @import "bootstrap";
 
@@ -24,7 +24,7 @@
 
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Sawarabi Mincho', sans-serif;
   color: #333;
   font-size: 14px;
   font-weight: 300;
@@ -114,7 +114,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 40px;
   font-weight: 100;
   letter-spacing: 1px;
