--- a/app/views/base64decoders/_header.html.erb
+++ b/app/views/base64decoders/_header.html.erb
@@ -3,7 +3,7 @@
       <div class="fixed-top">
           <div class="container">
             <div class="logo-menu">
-              <a href="" class="logo"><strong>Not-a-blog</strong></a>
+              <%= link_to 'Not-a-blog', root_path, class: "logo" %>
               <button class="menu-button" id="open-button"><i class="fa fa-bars" aria-hidden="true"></i></button>    
             </div>           
           </div>
