--- a/app/views/layouts/_header.htm.erb
+++ b/app/views/layouts/_header.htm.erb
@@ -3,8 +3,8 @@
       <div class="fixed-top">
           <div class="container">
             <div class="logo-menu">
-              <a href="" class="logo"><strong>Not-a-blog</strong></a>
-              <button class="menu-button" id="open-button"><i class="fa fa-bars" aria-hidden="true"></i></button>    
+              <%= link_to 'Not-a-Blog', root_path, class: "menu-button" %>
+              
             </div>           
           </div>
       </div>
