--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,12 @@
 
 <p id="notice"><%= notice %></p>
-
-
         <div class="section-header">          
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"><%= @post.title %></h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
             <%= image_tag @post.image_url, class: "blog-img" %>
-          <p class="section-blog-content wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s"><%= @post.body %> </p>
         </div>
-
+<div class="container">
+<%= markdown(@post.body) %>
+</div>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
