--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -25,14 +25,14 @@
 
 body {
   font-family: 'Sawarabi Mincho', sans-serif;
-  color: #333;
+  color: #479099;
   font-size: 14px;
   font-weight: 300;
   background: #fff;
   overflow-x: hidden;
 }
 p {
-  font-size: 14px;
+  font-size: 18px;
   line-height: 26px;
 }
 a:hover,
@@ -111,8 +111,18 @@ a {
 }
 h1,
 h2,
-h3,
-h4,
+h3 {
+  font-family: 'Merriweather', serif;
+  font-size: 20px;
+  font-weight: 100;
+  letter-spacing: 1px;
+}
+h4 {
+  font-family: 'Merriweather', serif;
+  font-size: 30px;
+  font-weight: 100;
+  letter-spacing: 1px;
+}
 h5 {
   font-family: 'Merriweather', serif;
   font-size: 40px;
@@ -124,7 +134,8 @@ ul {
   padding: 0;
 }
 ul li {
-  list-style: none;
+  list-style: disc;
+  font-size: 18px;
 }
 a:hover,
 a:focus {
@@ -276,7 +287,7 @@ a:not([href]):not([tabindex]):hover {
 #hero-area {
   
   background-size: cover;
-  color: #fff;
+  color: #479099;
   overflow: hidden;
   position: relative;
 }
@@ -286,9 +297,9 @@ a:not([href]):not([tabindex]):hover {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: #4676fa;
-  opacity: 0.7;
-  filter: alpha(opacity=70);
+  background: #479099;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
 }
 #hero-area .contents {
   padding: 160px 0 80px;
@@ -1284,3 +1295,26 @@ footer {
   position: relative;
   z-index: 1000;
 }
+
+/* Make sure that padding behaves as expected */
+* {box-sizing:border-box}
+
+/* Container for skill bars */
+.containerskills {
+    width: 100%; /* Full width */
+    background-color: #ddd; /* Grey background */
+}
+
+.skills {
+    text-align: right; /* Right-align text */
+    padding: 2px; /* Add some padding */
+    color: white; /* White text color */
+}
+
+.html {width: 90%; background-color: #4CAF50;} /* Green */
+.html40 {width: 40%; background-color: #4CAF50;} /* Green */
+.html50 {width: 50%; background-color: #4CAF50;} /* Green */
+.html60 {width: 60%; background-color: #4CAF50;} /* Green */
+.html70 {width: 70%; background-color: #4CAF50;} /* Green */
+.html80 {width: 80%; background-color: #4CAF50;} /* Green */
+.html90 {width: 90%; background-color: #4CAF50;} /* Green */
