--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" align="center">
 <div class="section-header">          
   <h2 class="section-title">User</h2>
       <hr class="lines">
@@ -13,11 +13,12 @@
 	<br>
 	<%= link_to('Logout', destroy_user_session_path, method: :delete) %> 
 <% else %>
-	Please Log in
+	<h5>Please Log in</h5>
 	<br>
 	<%= link_to 'Register', new_user_registration_path %>
+	<br>
 	<%= link_to 'Login', user_session_path %>
-	 <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, class: "nav-link" %>
+	<%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path, class: "nav-link" %>
 <% end %>
 
 <br>
