--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,10 +18,7 @@
                 <%= link_to 'Users', users_path, class: "nav-link" %>
               </li>            
               <li class="nav-item">
-               
-              </li>     
-              <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
+                  <%= link_to 'Citrakara', citrakara_path, class: "nav-link" %>
               </li> 
               <li class="nav-item">
                 <a class="nav-link" href="#subscribe">Subscribe</a>
