--- a/app/views/welcome/_body.html.erb
+++ b/app/views/welcome/_body.html.erb
@@ -4,18 +4,17 @@
 	<div class="col">
 		<h5>Pascales Dedy Kurniawan </h5>
 		<h3>QA and Back End Engineer</h3>
-		<p> I am a QA and also a Ruby on Rails Developer specialized in Backend API server and Rails Applications </p>
-		<br>
-		<br>
+		<p> I am a QA and also a Backend Developer specialized in Rails API server and Rails Applications </p>
+		<p> Currently I'm still learning Python-Tensorflow and Data processing</p>
 	</div>
 <div class="col">
-<li><i>Email: pascales.dedy@gmail.com 
+<li><i>Email: pascales.dedy@gmail.com </i></li>
 <li><i>Linkedin: linkedin.com/in/pascalesdedy</i></li>
-<li><i>Skype: pascales.kurniawan 
+<li><i>Skype: pascales.kurniawan </i></li>
 <li><i>Facebook: facebook.com/pascalesdedy.kurniawan</i></li>
 <li><i">Github: github.com/pascalesdedy </i></li>
-<li><i>Medium: medium.com/@pascales
-<li><i>Instagram: instagram.com/pascales.dedy
+<li><i>Medium: medium.com/@pascales</i></li>
+<li><i>Instagram: instagram.com/pascales.dedy</i></li>
 </div>
 </div>
 <div class="row">
@@ -100,13 +99,7 @@
 		Lover, involved in Building Complete Feature of a Rails Api server
 		</p>
 	<h4>TOOLS</h4>
-		Heroku
-		Yogyakarta
-		Postman
-		Git
-		Openshift Kubernetes Cluster
-		Forest-CMS
-		Selenium - Cucumber
+		Heroku, Postman, Git, Postgresql, Openshift Kubernetes Cluster, Forest-CMS,	Selenium - Cucumber, 
 	</div>
 </div>
 
