--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
           <div class="col-md-10">
             <div class="contents text-center">
               <h1 class="wow pos fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Hello there, I'm Pascales :)</h1>
-              <p class="lead pos  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">You can find some stuffs on my side menu, go on.... :) </p>
+              <p class="lead pos  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms"><i> Never give up, never give in, Won't stop believing cause I'm gonna win. Sing with my soul before I get old. What if there's no tomorrow. There is no limit to what can be done. Climbing the mountain with power so strong. Dusty roads, down the way Leaving the memories behind me.</i></p>
              </div>
               
           </div>
