[pascales] adding link for random quotes simple api server

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,7 +21,7 @@
                   <%= link_to 'Citrakara', citrakara_path, class: "nav-link" %>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="#subscribe">Subscribe</a>
+                <a class="nav-link" href="http://pascales-random-quotes.herokuapp.com/quotes" target="_blank">Random Quotes Simple Rails API server</a>
               </li>
             </ul>
           </div>
